--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
                 <input type="text" class="search-input hidden" placeholder="搜尋商品...">
                 <a href="#" class="icon-link search-toggle"><img src="images/search.png" alt="搜尋"></a>
             </div>
-            <a href="cart.html" class="icon-link"><img src="images/cart.png" alt="購物車"></a>
-            <a href="#" class="icon-link"><img src="images/member.png" alt="會員"></a>
         </div>
     </header>
 
@@ -61,7 +59,7 @@
                 </a> 
                 <h3>商品名稱1</h3>
                 <p>$399</p>
-                <button class="btn" data-id="1">加入購物車</button>                    
+                <button class="btn">加入購物車</button>                          
             </div>
             <div class="product-card">
                 <a href="product.html?id=2">
@@ -69,7 +67,7 @@
                 </a> 
                 <h3>商品名稱2</h3>
                 <p>$399</p>
-                <button class="btn" data-id="2">加入購物車</button>
+                <button class="btn">加入購物車</button>
             </div>
             <div class="product-card">
                 <a href="product.html?id=3">
@@ -77,7 +75,7 @@
                 </a> 
                 <h3>商品名稱3</h3>
                 <p>$399</p>
-                <button class="btn" data-id="3">加入購物車</button>
+                <button class="btn">加入購物車</button>
             </div>
             <div class="product-card">
                 <a href="product.html?id=4">
@@ -85,7 +83,7 @@
                 </a> 
                 <h3>商品名稱4</h3>
                 <p>$399</p>
-                <button class="btn" data-id="4">加入購物車</button>
+                <button class="btn">加入購物車</button>
             </div>
             
             <!-- 請依此樣式複製 16 次 -->
@@ -103,6 +101,5 @@
     <p>&copy; Elqamar ｜聯絡我們：XXXXX@gmail.com</p>
     </footer>
 
-    <script src="js/index.js"></script>
-    <script src="js/cart.js"></script></body>
+    <script src="js/index.js"></script> </body>
 </html>
