--- a/product.html
+++ b/product.html
@@ -28,9 +28,11 @@
                 </ul>
             </nav>
         </div>
-        <div class="navbar-right">            
-            <a href="cart.html" class="icon-link"><img src="images/cart.png" alt="購物車"></a>
-            <a href="#" class="icon-link"><img src="images/member.png" alt="會員"></a>
+        <div class="navbar-right">
+            <div class="search-container">
+                <input type="text" class="search-input hidden" placeholder="搜尋商品...">
+                <a href="#" class="icon-link search-toggle"><img src="images/search.png" alt="搜尋"></a>
+            </div>
         </div>
     </header>
     <!-- 導覽列 -->
@@ -87,6 +89,5 @@
         <p>&copy; Elqamar ｜聯絡我們：XXXXX@gmail.com</p>
     </footer>
 
-    <script src="js/product.js"></script>
-    <script src="js/cart.js"></script> </body>
+    <script src="js/product.js"></script> </body>
 </html>
