--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 
     <!-- 精選商品區 -->
+    <!-- 頁面顯示的數量到JS改 -->
     <section class="product-section">
         <h2>預購商品</h2>
         <div class="product-grid">
@@ -58,8 +59,7 @@
                     <img src="images/samplephoto.png" alt="商品1">                    
                 </a> 
                 <h3>商品名稱1</h3>
-                <p>$399</p>
-                <button class="btn">加入購物車</button>                          
+                <p>$399</p>                  
             </div>
             <div class="product-card">
                 <a href="product.html?id=2">
@@ -67,7 +67,6 @@
                 </a> 
                 <h3>商品名稱2</h3>
                 <p>$399</p>
-                <button class="btn">加入購物車</button>
             </div>
             <div class="product-card">
                 <a href="product.html?id=3">
@@ -75,7 +74,6 @@
                 </a> 
                 <h3>商品名稱3</h3>
                 <p>$399</p>
-                <button class="btn">加入購物車</button>
             </div>
             <div class="product-card">
                 <a href="product.html?id=4">
@@ -83,9 +81,7 @@
                 </a> 
                 <h3>商品名稱4</h3>
                 <p>$399</p>
-                <button class="btn">加入購物車</button>
-            </div>
-            
+            </div>            
             <!-- 請依此樣式複製 16 次 -->
         </div>
     </section>
