--- a/notice.html
+++ b/notice.html
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-    <!-- 精選商品區 -->
+    <!-- 交易須知 -->
     <section class="product-section">
         <h2>交易須知</h2>
             <div class="text-container">
@@ -46,9 +46,34 @@
                 <div class="right-text" >● 未成年交易視為監護人同意<br>● 客製化服務為代買，無法保證真偽，請自行評估風險與責任<br>● 不與黑灰單交易<br>● 視情況進行二補<br>
                 ● 除寄錯/少寄外，售後不退，請確認清楚再購買<br>● 物品需一段時間等待<br>● 商品皆默認初傷、運損</div>
             </div>
-
-
     </section>
+    <!-- 付款方式 -->
+    <section class="product-section">
+    <div class="text-container">
+        <div class="left-text">
+            <section class="product-section">
+                <h2>付款方式</h2>
+                ✨ 匯款    <br>
+                ✨ 台新無卡<br>
+                ✨ 超商條碼+30<br>
+                ✨ 超商代碼+30<br>
+                ✨ 郵局跨行（郵局會收30手續費）<br>
+                ✨ 空包+12<br>
+            </section>
+        </div>
+        <div class="right-text">
+            <section class="product-section">
+                <h2>配送方式</h2>
+                ✨ 賣貨便＋15＆當月運費<br>
+                ✨ 好賣家＋15＆當月運費<br>
+                ✨ 蝦皮＋當月手續%數＆當月運費<br>
+                ✨ 郵局<a href="https://www.post.gov.tw/post/internet/Postal/index.jsp?ID=2030103" style="text-decoration: none;">（費用請詳閱網址）</a><br><br><br>
+            </section>
+        </div>
+    </div>
+    </section>
+
+            
     <!-- 選頁 -->
     <!-- <div class="pagination">
         <button class="page-btn" data-page="1">1</button>
