--- a/product.html
+++ b/product.html
@@ -28,12 +28,6 @@
                 </ul>
             </nav>
         </div>
-        <div class="navbar-right">
-            <div class="search-container">
-                <input type="text" class="search-input hidden" placeholder="搜尋商品...">
-                <a href="#" class="icon-link search-toggle"><img src="images/search.png" alt="搜尋"></a>
-            </div>
-        </div>
     </header>
     <!-- 導覽列 -->
 
@@ -54,7 +48,7 @@
 
     <div class="product-description">
         <!-- 到JS改 -->
-        <h2>商品說明</h2>
+        <h2>商品簡介</h2>
         <p id="product-description">這是商品的詳細描述。</p>
     </div>
     </section>
@@ -66,5 +60,6 @@
         <p>&copy; Elqamar ｜聯絡我們：XXXXX@gmail.com</p>
     </footer>
 
+    <script src="js/allProductsData.js"></script>
     <script src="js/product.js"></script> </body>
 </html>
