--- a/product.html
+++ b/product.html
@@ -4,62 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elqamar商品細項</title>
-    <link rel="stylesheet" href="css/product.css"> </head>
-    <!-- 小圖示 for 瀏覽器標籤 -->
+    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
-<!-- 導覽列 -->
+</head>
 <body>
     <header class="navbar">
         <div class="navbar-left">
-            <a href="index.html" class="logo">Elqamar</a> <nav>
+            <a href="index.html" class="logo">Elqamar</a>
+            <nav>
                 <ul>
                     <li><a href="index.html">首頁</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropbtn">商品 <i class="arrow down"></i></a>
+                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
                         <div class="dropdown-content">
-                            <a href="#">商品分類一</a>
-                            <a href="#">商品分類二</a>
-                            <a href="#">商品分類三</a>
+                            <a href="idv.html">第五人格</a>
+                            <a href="#"></a>
+                            <a href="#"></a>
                         </div>
                     </li>
+                    <li><a href="spot.html">現貨商品</a></li>
                     <li><a href="notice.html">交易須知</a></li>
-                    <li><a href="#">Q&A</a></li>
+                    <li><a href="qa.html">Q&A</a></li>
                 </ul>
             </nav>
         </div>
-    </header>
-    <!-- 導覽列 -->
-
-     <!-- 頁面 -->
-    <section class="product-detail">
-    <div class="product-wrapper">
-        <!-- 左側圖片 -->
-        <div class="product-image">
-        <img id="product-img" src="" alt="商品圖片">
+        <div class="navbar-right">
+            <a href="cart.html" class="icon-link cart-icon-wrapper">
+                <img src="images/cart.png" alt="購物車">
+                <span class="cart-count">0</span>
+            </a>
+            <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link"><img src="images/ig.png" alt="IG"></a>
+            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link"><img src="images/fb.png" alt="FB"></a>
         </div>
+    </header>
 
-        <!-- 右側資訊 -->
-        <div class="product-info">
-        <!-- 到JS改 -->
-        <h1 id="product-name">商品名稱</h1>
-        <p id="product-price" class="price">價格：$</p>
-    <hr class="section-divider">
+    <section class="product-detail">
+        <div class="product-wrapper">
+            <div class="product-image">
+                <img id="product-img" src="" alt="商品圖片">
+            </div>
 
-    <div class="product-description">
-        <!-- 到JS改 -->
-        <h2>商品簡介</h2>
-        <p id="product-description">這是商品的詳細描述。</p>
-    </div>
-    </section>
-    <!-- 頁面 -->
+            <div class="product-info">
+                <h1 id="product-name">商品名稱</h1>
+                <p id="product-price" class="price">價格：$</p>
 
+                <div class="product-options">
+                    <div class="quantity-and-favorite">
+                        <label for="quantity-select">數量：</label>
+                        <select id="quantity-select" class="quantity-select">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                        </select>
+                    </div>
+                    <button id="add-to-cart-btn" class="btn add-to-cart-btn">加入購物車</button>
+                </div>
 
-    <!-- 頁尾 -->
+                <hr class="section-divider">
+
+                <div class="product-description">
+                    <h2>商品說明</h2>
+                    <p id="product-description">這是商品的詳細描述。</p>
+                </div>
+            </div>
+        </section>
+
     <footer class="footer">
-        <p>&copy; Elqamar ｜聯絡我們：XXXXX@gmail.com</p>
+        <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
+                <img src="images/ig.png" alt="IG">
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
+                <img src="images/fb.png" alt="FB">
+            </a></p>
     </footer>
 
+    <!-- 提示框 -->
+    <div id="toast-notification" class="toast-notification"></div>
+
     <script src="js/allProductsData.js"></script>
-    <script src="js/product.js"></script> </body>
+    <script src="js/cart-count.js"></script>
+    <script src="js/product.js"></script>
+    </body>
 </html>
