--- a/spot.html
+++ b/spot.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar</title>
-    <link rel="stylesheet" href="css/index.css">
+    <title>商品分類一 - Elqamar</title>
+    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
@@ -24,7 +24,7 @@
                             <a href="#"></a>
                         </div>
                     </li>
-                    <li><a href="spot.html">現貨商品</a></li>
+                    <li><a href="">現貨商品</a></li>
                     <li><a href="notice.html">交易須知</a></li>
                     <li><a href="qa.html">Q&A</a></li>
                 </ul>
@@ -38,7 +38,9 @@
             <a href="cart.html" class="icon-link cart-icon-wrapper">
                 <img src="images/cart.png" alt="購物車">
                 <span class="cart-count">0</span>
+            <!-- 小紅點會自動插入這裡 -->
             </a>
+
             <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
             </a>
@@ -47,19 +49,10 @@
             </a>
         </div>
     </header>
-
-    <section class="carousel">
-        <div class="carousel-track">
-            <img src="images/無結帳.png" alt="輪播1" />
-            <img src="images/限時開團.png" alt="輪播2" />
-            <!-- <img src="images/samplephoto.png" alt="輪播3" /> -->
-        </div>
-        <button class="carousel-btn prev">&#10094;</button>
-        <button class="carousel-btn next">&#10095;</button>
-    </section>
+    
 
     <section class="product-section">
-        <h2>限時開團</h2> 
+        <h2>現貨商品</h2> 
         <div class="product-grid"></div>
     </section>
 
@@ -75,9 +68,9 @@
     </footer>
 
     <div id="toast-notification" class="toast-notification"></div>
-
+    
     <script src="js/allProductsData.js"></script>
     <script src="js/cart-count.js"></script>
-    <script src="js/index.js"></script>
-    </body>
+    <script src="js/spot.js"></script>
+</body>
 </html>
