--- a/qa.html
+++ b/qa.html
@@ -64,7 +64,7 @@
                         <span class="accordion-icon">&#9660;</span>
                     </button>
                     <div class="accordion-content">
-                        <p>我們目前支援銀行轉帳、空包、以及超商代碼繳費等。詳情請見交易須知頁面。</p>
+                        <p>我們目前支援銀行轉帳、空包、以及超商代碼繳費等，現貨可直接私訊連結下單。詳情請見交易須知頁面。</p>
                     </div>
                 </div>
 
