--- a/notice.html
+++ b/notice.html
@@ -44,6 +44,18 @@
             </a>
         </div>
     </header>
+    <!-- 交易流程 -->
+    <section class="product-section">
+        <h2>購買流程</h2>
+        <div class="step-container">
+            <div class="step">1. 選擇商品</div>
+            <div class="step">2. 私訊確認訂單資料</div>
+            <div class="step">3. 選擇付款方式</div>
+            <div class="step">4. 等待商品到台</div>
+            <div class="step">5. 二補價格</div>
+            <div class="step">6. 物流配送</div>
+        </div>            
+    </section>
 
     <!-- 精選商品區 -->
     <section class="product-section">
