--- a/notice.html
+++ b/notice.html
@@ -46,7 +46,7 @@
     </header>
     <!-- 交易流程 -->
     <section class="product-section">
-        <h2>購買流程</h2>
+        <h2>購買流程(預購&限時開團)</h2>
         <div class="step-container">
             <div class="step">1. 選擇商品</div>
             <div class="step">2. 私訊確認訂單資料</div>
