--- a/qa.html
+++ b/qa.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
 </head>
 <body>
+    <main class="qa-container">
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
@@ -42,6 +43,7 @@
             </a>
         </div>
     </header>
+    </main>
 
     <main class="qa-container">
         <h1>常見問題與聯絡我們</h1>
