--- a/qa.html
+++ b/qa.html
@@ -13,22 +13,30 @@
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">首頁</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="idv.html">第五人格</a>
-                            <a href="#"></a>
-                            <a href="#"></a>
-                        </div>
-                    </li>
-                    <li><a href="spot.html">現貨商品</a></li>
-                    <li><a href="notice.html">交易須知</a></li>
-                    <li><a href="qa.html">Q&A</a></li> </ul>
-            </nav>
+            <div class="menu-toggle">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </div>
+        
+        <nav>
+            <ul>
+                <li><a href="index.html">首頁</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
+                    <div class="dropdown-content">
+                        <a href="idv.html">第五人格</a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                    </div>
+                </li>
+                <li><a href="spot.html">現貨商品</a></li>
+                <li><a href="notice.html">交易須知</a></li>
+                <li><a href="qa.html">Q&A</a></li>
+            </ul>
+        </nav>
+
         <div class="navbar-right">
             <a href="cart.html" class="icon-link cart-icon-wrapper">
                 <img src="images/cart.png" alt="購物車">
