--- a/cart.html
+++ b/cart.html
@@ -10,29 +10,44 @@
 <body>
   <header class="navbar">
     <div class="navbar-left">
-      <a href="index.html" class="logo">Elqamar</a>
-      <nav>
+        <a href="index.html" class="logo">Elqamar</a>
+        <div class="menu-toggle">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
+    </div>
+
+    <nav>
         <ul>
-          <li><a href="index.html">首頁</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-            <div class="dropdown-content">
-              <a href="idv.html">第五人格</a>
-              <a href="#"></a>
-              <a href="#"></a>
-            </div>
-          </li>
-          <li><a href="spot.html">現貨商品</a></li>
-          <li><a href="notice.html">交易須知</a></li>
-          <li><a href="qa.html">Q&A</a></li>
-        </ul>
-      </nav>
-    </div>
+            <li><a href="index.html">首頁</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
+                <div class="dropdown-content">
+                    <a href="idv.html">第五人格</a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                </div>
+            </li>
+            <li><a href="spot.html">現貨商品</a></li>
+            <li><a href="notice.html">交易須知</a></li>
+            <li><a href="qa.html">Q&A</a></li>
+            </ul>
+    </nav>
+
     <div class="navbar-right">
-      <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link"><img src="images/ig.png" alt="IG"></a>
-      <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link"><img src="images/fb.png" alt="FB"></a>
+        <a href="cart.html" class="icon-link cart-icon-wrapper">
+            <img src="images/cart.png" alt="購物車">
+            <span class="cart-count">0</span>
+        </a>
+        <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
+            <img src="images/ig.png" alt="IG">
+        </a>
+        <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
+            <img src="images/fb.png" alt="FB">
+        </a>
     </div>
-  </header>
+</header>
 
   <section class="cart-section">
     <h2>此為試算處</h2>
