--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Elqamar—購物車</title>
+  <link rel="stylesheet" href="css/qa.css" />
   <link rel="stylesheet" href="css/cart.css" />
   <link rel="stylesheet" href="css/common.css" />
 </head>
@@ -85,6 +86,7 @@
   <div id="toast-notification" class="toast-notification"></div>
 
   <script src="js/allProductsData.js"></script>
+  <script src="js/qa.js"></script>
   <script src="js/cart.js"></script>
 </body>
 </html>
