--- a/cart.html
+++ b/cart.html
@@ -49,7 +49,7 @@
         </a>
     </div>
 </header>
-
+<main class="qa-container">
   <section class="cart-section">
     <h2>此為試算處</h2>
     <div class="cart-container">
@@ -73,7 +73,7 @@
       </div>
     </div>
   </section>
-
+</main>
   <footer class="footer">
         <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
