--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
                 <div class="dropdown-content">
                     <a href="idv.html">第五人格</a>
-                    <a href="#">商品類別二 (範例)</a>
-                    <a href="#">商品類別三 (範例)</a>
+                    <a href="#"></a>
+                    <a href="#"></a>
                 </div>
             </li>
             <li><a href="spot.html">現貨商品</a></li>
@@ -51,7 +51,7 @@
         </a>
     </div>
 </header>
-
+<main class="qa-container">
     <section class="carousel">
         <div class="carousel-track">
             <img src="images/無結帳.png" alt="輪播1" />
@@ -68,7 +68,7 @@
     </section>
 
     <div class="pagination"></div>
-
+</main>
     <footer class="footer">
         <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
