--- a/notice.html
+++ b/notice.html
@@ -30,8 +30,8 @@
                 <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
                 <div class="dropdown-content">
                     <a href="idv.html">第五人格</a>
-                    <a href="#">商品類別二 (範例)</a>
-                    <a href="#">商品類別三 (範例)</a>
+                    <a href="#"></a>
+                    <a href="#"></a>
                 </div>
             </li>
             <li><a href="spot.html">現貨商品</a></li>
@@ -53,6 +53,7 @@
         </a>
     </div>
 </header>
+<main class="qa-container">
     <!-- 交易流程 -->
     <section class="product-section">
         <h2>購買流程(預購&限時開團)</h2>
@@ -108,7 +109,7 @@
         <button class="page-btn" data-page="2">2</button>
         <button class="page-btn" data-page="3">3</button>
     </div> -->
-
+</main>
     <!-- 頁尾 -->
     <footer class="footer">
         <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
