--- a/notice.html
+++ b/notice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar</title>
+    <title>Elqamar—交易須知</title>
     <link rel="stylesheet" href="css/qa.css">
     <link rel="stylesheet" href="css/notice.css">
     <link rel="stylesheet" href="css/common.css">
