--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar商品細項</title>
+    <title>Elqamar—商品細項</title>
     <link rel="stylesheet" href="css/qa.css">
     <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
