--- a/qa.html
+++ b/qa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar | Q&A</title>
+    <title>Elqamar—Q&A</title>
     <link rel="stylesheet" href="css/qa.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
