--- a/spot.html
+++ b/spot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>現貨商品 - Elqamar</title>
+    <title>Elqamar—現貨商品</title>
     <link rel="stylesheet" href="css/qa.css">
     <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
