--- a/notice.html
+++ b/notice.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar—交易須知</title>
-    <link rel="stylesheet" href="css/qa.css">
-    <link rel="stylesheet" href="css/notice.css">
+    <title>Elqamar</title>
+    <link rel="stylesheet" href="css/notice.css"> </head>
     <link rel="stylesheet" href="css/common.css">
     <!-- 小圖示 for 瀏覽器標籤 -->
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
@@ -14,46 +13,37 @@
 
 <body>
     <header class="navbar">
-    <div class="navbar-left">
-        <a href="index.html" class="logo">Elqamar</a>
-        <div class="menu-toggle">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+        <div class="navbar-left">
+            <a href="index.html" class="logo">Elqamar</a> <nav>
+                <ul>
+                    <li><a href="index.html">首頁</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="idv.html">第五人格</a>
+                            <a href="#"></a>
+                            <a href="#"></a>
+                        </div>
+                    </li>
+                    <li><a href="spot.html">現貨商品</a></li>
+                    <li><a href="">交易須知</a></li>
+                    <li><a href="qa.html">Q&A</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
-
-    <nav>
-        <ul>
-            <li><a href="index.html">首頁</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                <div class="dropdown-content">
-                    <a href="idv.html">第五人格</a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                </div>
-            </li>
-            <li><a href="spot.html">現貨商品</a></li>
-            <li><a href="notice.html">交易須知</a></li>
-            <li><a href="qa.html">Q&A</a></li>
-            </ul>
-    </nav>
-
-    <div class="navbar-right">
-        <a href="cart.html" class="icon-link cart-icon-wrapper">
-            <img src="images/cart.png" alt="購物車">
-            <span class="cart-count">0</span>
-        </a>
-        <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-            <img src="images/ig.png" alt="IG">
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-            <img src="images/fb.png" alt="FB">
-        </a>
-    </div>
-</header>
-<main class="qa-container">
+        <div class="navbar-right">
+            <a href="cart.html" class="icon-link cart-icon-wrapper">
+                <img src="images/cart.png" alt="購物車">
+                <span class="cart-count">0</span>
+            </a>
+            <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
+                <img src="images/ig.png" alt="IG">
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
+                <img src="images/fb.png" alt="FB">
+            </a>
+        </div>
+    </header>
     <!-- 交易流程 -->
     <section class="product-section">
         <h2>購買流程(預購&限時開團)</h2>
@@ -109,7 +99,7 @@
         <button class="page-btn" data-page="2">2</button>
         <button class="page-btn" data-page="3">3</button>
     </div> -->
-</main>
+
     <!-- 頁尾 -->
     <footer class="footer">
         <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
@@ -120,6 +110,5 @@
             </a></p>
     </footer>
 
-    <script src="js/cart-count.js"></script>
-    <script src="js/qa.js"></script></body>
+    <script src="js/cart-count.js"></script></body>
 </html>
