--- a/qa.html
+++ b/qa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar—Q&A</title>
+    <title>Elqamar | Q&A</title>
     <link rel="stylesheet" href="css/qa.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
@@ -13,30 +13,22 @@
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
-            <div class="menu-toggle">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">首頁</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="idv.html">第五人格</a>
+                            <a href="#"></a>
+                            <a href="#"></a>
+                        </div>
+                    </li>
+                    <li><a href="spot.html">現貨商品</a></li>
+                    <li><a href="notice.html">交易須知</a></li>
+                    <li><a href="qa.html">Q&A</a></li> </ul>
+            </nav>
         </div>
-        
-        <nav>
-            <ul>
-                <li><a href="index.html">首頁</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="idv.html">第五人格</a>
-                        <a href="#"></a>
-                        <a href="#"></a>
-                    </div>
-                </li>
-                <li><a href="spot.html">現貨商品</a></li>
-                <li><a href="notice.html">交易須知</a></li>
-                <li><a href="qa.html">Q&A</a></li>
-            </ul>
-        </nav>
-
         <div class="navbar-right">
             <a href="cart.html" class="icon-link cart-icon-wrapper">
                 <img src="images/cart.png" alt="購物車">
@@ -50,6 +42,7 @@
             </a>
         </div>
     </header>
+
     <main class="qa-container">
         <h1>常見問題與聯絡我們</h1>
 
