--- a/cart.html
+++ b/cart.html
@@ -4,52 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Elqamar—購物車</title>
-  <link rel="stylesheet" href="css/qa.css" />
   <link rel="stylesheet" href="css/cart.css" />
   <link rel="stylesheet" href="css/common.css" />
 </head>
 <body>
   <header class="navbar">
     <div class="navbar-left">
-        <a href="index.html" class="logo">Elqamar</a>
-        <div class="menu-toggle">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
-    </div>
-
-    <nav>
+      <a href="index.html" class="logo">Elqamar</a>
+      <nav>
         <ul>
-            <li><a href="index.html">首頁</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                <div class="dropdown-content">
-                    <a href="idv.html">第五人格</a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                </div>
-            </li>
-            <li><a href="spot.html">現貨商品</a></li>
-            <li><a href="notice.html">交易須知</a></li>
-            <li><a href="qa.html">Q&A</a></li>
-            </ul>
-    </nav>
-
-    <div class="navbar-right">
-        <a href="cart.html" class="icon-link cart-icon-wrapper">
-            <img src="images/cart.png" alt="購物車">
-            <span class="cart-count">0</span>
-        </a>
-        <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-            <img src="images/ig.png" alt="IG">
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-            <img src="images/fb.png" alt="FB">
-        </a>
+          <li><a href="index.html">首頁</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
+            <div class="dropdown-content">
+              <a href="idv.html">第五人格</a>
+              <a href="#"></a>
+              <a href="#"></a>
+            </div>
+          </li>
+          <li><a href="spot.html">現貨商品</a></li>
+          <li><a href="notice.html">交易須知</a></li>
+          <li><a href="qa.html">Q&A</a></li>
+        </ul>
+      </nav>
     </div>
-</header>
-<main class="qa-container">
+    <div class="navbar-right">
+      <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link"><img src="images/ig.png" alt="IG"></a>
+      <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link"><img src="images/fb.png" alt="FB"></a>
+    </div>
+  </header>
+
   <section class="cart-section">
     <h2>此為試算處</h2>
     <div class="cart-container">
@@ -73,7 +57,7 @@
       </div>
     </div>
   </section>
-</main>
+
   <footer class="footer">
         <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
@@ -86,7 +70,6 @@
   <div id="toast-notification" class="toast-notification"></div>
 
   <script src="js/allProductsData.js"></script>
-  <script src="js/qa.js"></script>
   <script src="js/cart.js"></script>
 </body>
 </html>
