--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elqamar</title>
-    <link rel="stylesheet" href="css/qa.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
@@ -12,46 +11,43 @@
 </head>
 <body>
     <header class="navbar">
-    <div class="navbar-left">
-        <a href="index.html" class="logo">Elqamar</a>
-        <div class="menu-toggle">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+        <div class="navbar-left">
+            <a href="index.html" class="logo">Elqamar</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">首頁</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
+                        <div class="dropdown-content">
+                            <a href="idv.html">第五人格</a>
+                            <a href="#"></a>
+                            <a href="#"></a>
+                        </div>
+                    </li>
+                    <li><a href="spot.html">現貨商品</a></li>
+                    <li><a href="notice.html">交易須知</a></li>
+                    <li><a href="qa.html">Q&A</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
+        <div class="navbar-right">
+            <div class="search-container">
+                <input type="text" class="search-input hidden" placeholder="搜尋商品...">
+                <a href="#" class="icon-link search-toggle"><img src="images/search.png" alt="搜尋"></a>
+            </div>
+            <a href="cart.html" class="icon-link cart-icon-wrapper">
+                <img src="images/cart.png" alt="購物車">
+                <span class="cart-count">0</span>
+            </a>
+            <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
+                <img src="images/ig.png" alt="IG">
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
+                <img src="images/fb.png" alt="FB">
+            </a>
+        </div>
+    </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">首頁</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                <div class="dropdown-content">
-                    <a href="idv.html">第五人格</a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                </div>
-            </li>
-            <li><a href="spot.html">現貨商品</a></li>
-            <li><a href="notice.html">交易須知</a></li>
-            <li><a href="qa.html">Q&A</a></li>
-            </ul>
-    </nav>
-
-    <div class="navbar-right">
-        <a href="cart.html" class="icon-link cart-icon-wrapper">
-            <img src="images/cart.png" alt="購物車">
-            <span class="cart-count">0</span>
-        </a>
-        <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-            <img src="images/ig.png" alt="IG">
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-            <img src="images/fb.png" alt="FB">
-        </a>
-    </div>
-</header>
-<main class="qa-container">
     <section class="carousel">
         <div class="carousel-track">
             <img src="images/無結帳.png" alt="輪播1" />
@@ -68,7 +64,7 @@
     </section>
 
     <div class="pagination"></div>
-</main>
+
     <footer class="footer">
         <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
                 <img src="images/ig.png" alt="IG">
@@ -82,7 +78,6 @@
 
     <script src="js/allProductsData.js"></script>
     <script src="js/cart-count.js"></script>
-    <script src="js/qa.js"></script>
     <script src="js/index.js"></script>
     </body>
 </html>
