--- a/qa.html
+++ b/qa.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elqamar | Q&A</title>
-    <link rel="stylesheet" href="css/qa.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/qa.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
 </head>
@@ -128,6 +128,7 @@
     <div id="toast-notification" class="toast-notification"></div>
 
     <script src="js/cart-count.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/qa.js"></script>
 </body>
 </html>
