--- a/idv.html
+++ b/idv.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品分類一 - Elqamar</title>
-    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
 </head>
@@ -13,22 +13,23 @@
     <header class="navbar">
         <div class="navbar-left">
             <a href="index.html" class="logo">Elqamar</a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">首頁</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="">第五人格</a>
-                            <a href="#"></a>
-                            <a href="#"></a>
-                        </div>
-                    </li>
-                    <li><a href="spot.html">現貨商品</a></li>
-                    <li><a href="notice.html">交易須知</a></li>
-                    <li><a href="qa.html">Q&A</a></li>
-                </ul>
-            </nav>
+            <div class="hamburger-menu" id="hamburgerMenu">&#9776;</div> <a href="index.html" class="logo">Elqamar</a>
+                <nav id="mainNav"> <ul>
+                        <li><a href="index.html">首頁</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
+                            <div class="dropdown-content">
+                                <a href="idv.html">第五人格</a>
+                                <a href="#"></a>
+                                <a href="#"></a>
+                            </div>
+                        </li>
+                        <li><a href="spot.html">現貨商品</a></li>
+                        <li><a href="notice.html">交易須知</a></li>
+                        <li><a href="qa.html">Q&A</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
         <div class="navbar-right">
             <div class="search-container">
@@ -71,6 +72,7 @@
     
     <script src="js/allProductsData.js"></script>
     <script src="js/cart-count.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/idv.js"></script>
 </body>
 </html>
