--- a/notice.html
+++ b/notice.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elqamar</title>
-    <link rel="stylesheet" href="css/notice.css"> </head>
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/common.css"> </head>
+    <link rel="stylesheet" href="css/notice.css">
     <!-- 小圖示 for 瀏覽器標籤 -->
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
@@ -110,5 +110,6 @@
             </a></p>
     </footer>
 
+    <script src="js/common.js"></script>
     <script src="js/cart-count.js"></script></body>
 </html>
