--- a/product.html
+++ b/product.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elqamar商品細項</title>
-    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
     <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
 </head>
@@ -92,6 +92,7 @@
 
     <script src="js/allProductsData.js"></script>
     <script src="js/cart-count.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/product.js"></script>
     </body>
 </html>
